fixed map on mobile screens

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -69,9 +69,12 @@ nav > .links {
 }
 
 #dvMap {
-  width: 100vw; 
-  height: 100%; 
-  clip-path: polygon(-490% 0, 100% 0, 100% 90%, 50% 100%);"
+  width: 100%;
+  height: 650px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
 }
 
 .button__section {
